objects/copado__Environmental_Variable__c.object
<CustomObject>
    <fields>
        <fullName>copado__Environment__c</fullName>
        <label>Environment</label>
        <referenceTo>copado__Environment__c</referenceTo>
        <relationshipName>Environmental_Variables</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>copado__Scope__c</fullName>
        <description>Use this field to define a Scope for this Environment Variable. For more information, please check our documentation about Environment Variables Scope.</description>
        <inlineHelpText>Use this field to define a Scope for this Environment Variable. For more information, please check our documentation about Environment Variables Scope.</inlineHelpText>
        <label>Scope</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>